<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_text">Is Ash sixteen years old?</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="cheat_button">Cheat!</string>
    <string name="cheat_shame">You Cheated!!!?</string>
    <string name="cheat_warning">Are you sure?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="question1">Is charizard a fire type pokemon?</string>
    <string name="question2">Is venasaur a grass type pokemon?</string>
    <string name="question3">Is blastoise a water type pokemon?</string>
    <string name="question4">Is sylveon a psychic type pokemon?</string>
    <string name="question5">Is it true eevee has eight evolution?</string>
    <string name="question6">How old is Ash?</string>
    <string name="question7">What is froakie\'s evolution?</string>
    <string name="next_button">Next</string>
    <string name="restart_button">Restart?</string>

    <string name="question_1_hint">Good against grass</string>
    <string name="question_2_hint">Good against water.</string>
    <string name="question_3_hint">Good against fire.</string>
    <string name="question_4_hint">What is Espeon?</string>
    <string name="question_5_hint">List out the evolutions.</string>
    <string name="questuion_6_hint">Does he age at all?</string>
    <string name="question_7_hint">The evolution slowly turns into a ninja?</string>
    <string name="score">Score: </string>
    <string name="Finish">You have completed the quiz!</string>
    <string name="check_button">Check</string>
    <string-array name="question6answers">
        <item>10</item>
        <item>Ten</item>
        <item>ten years old</item>
    </string-array>
    <string-array name="question7answers">
        <item>Greninja</item>
        <item>Frogninja</item>
        <item>Ninjaboy</item>
        <item>Ninja the twitch streamer</item>
    </string-array>
</resources>