<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/DefaultColor"
    tools:context=".QuizOverActivity">

    <TextView
        android:id="@+id/end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Finish"
        android:textColor="@color/BlackText"
        android:padding="24dp"/>

    <TextView
        android:id="@+id/end_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/BlackText"
        android:padding="24dp" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_button"/>

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share Score"/>

</LinearLayout>