<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBG"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text"
        android:textSize="24dp"
        android:textColor="@color/TextColor"
        />
    <TextView
        android:id="@+id/score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score: 0"
        android:layout_above="@id/text_view"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        />
    <Button
        android:id="@+id/HintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hint!"
        />
    <LinearLayout
        android:id="@+id/true_false_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:background="@color/ButtonColor1"
            android:textColor="@color/ButtonTextColor"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:background="@color/ButtonColor2"
            android:textColor="@color/ButtonTextColor"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fill_the_blank_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/check_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_button"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/multiple_choice_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/a_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/b_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/c_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/d_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            />
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            />
    </LinearLayout>
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"/>
    <Button
        android:id="@+id/Restarting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_button"/>
    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->
        <!--<TextView-->
            <!--android:id="@+id/score_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="0"-->
            <!--android:textSize="24dp"-->
            <!--android:textColor="@color/TextColor"-->
            <!--/>-->
    <!--</LinearLayout>-->
</LinearLayout>
